--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,46 +1,41 @@
+html {
+  background-color: #D4D4D4;
+}
+
 body { 
-	margin-top: 0%; 
-	margin-right: 5%; 
-	margin-bottom: 0%; 
-	margin-left: 8%; 
-     }
-
-table {
-
-    /* Prevent background color leaks */
-    -webkit-background-clip: padding-box; 
-    -moz-background-clip:    padding; 
-    background-clip:         padding-box;
-
-    border-collapse: collapse;
-    margin-top: 1%;
-    margin-bottom: 6%;
-    background: #FFFFFF;
-
-    border-collapse: collapse;
-    border: 1px solid black;
-}
-
-th, td {
-   border: 2px solid black;
-}
-
-td {
+	  margin-top: 2%; 
+	  margin-right: 5%; 
+	  margin-bottom: 2%; 
+	  margin-left: 5%;
     padding: 5%;
-    width: 50%;
+  }
+
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
-P {
-    margin-top: 3%;
-    margin-bottom: 1%;
+h1 {
+  color: orange;
 }
 
-h2, h4, h5 {
-    margin-top: 2%;
-    margin-bottom: 2%;
+h2 {
+  font-size: 18px;
 }
 
-h3 {
-    margin-top: 4%;
-    margin-bottom: 2%;
+.backtable {
+    border-radius: 20px;
+    border: 2px solid black;
+    background-color: #818181;
+}
+
+.backtable td {
+  padding: 10px;
+  font-size: 22px;
+}
+
+button {
+  width: 300px;
 }
